--- a/navbar/static/css/style.css
+++ b/navbar/static/css/style.css
@@ -28,13 +28,7 @@ body {
     display: flex;
 }
 
-.main{
-    min-height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    transition: all 0.35 ease-in-out;
-    background-color: whitesmoke;
-}
+
 
 #sidebar {
     width: 70px;
@@ -61,10 +55,6 @@ body {
 #toggle-btn i {
     font-size: 1.5rem;
     color: #fff;
-}
-
-.sidebar-logo {
-    margin: auto 0;
 }
 
 .sidebar-logo a {
@@ -98,7 +88,7 @@ a.sidebar-link{
 }
 
 a.sidebar-link:hover {
-    background-color: rgba(255, 255, 255, .075);
+    background-color: rgba(10, 67, 239, 0.075);
     border-left: 3px solid rgb(199, 92, 92);
 }
 
@@ -140,3 +130,4 @@ a.sidebar-link:hover {
     transform: rotate(45deg);
     transition: all .2s ease-out;
 }
+
